# django-sse-liveqa

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-entrypoint.sh  manage.py  pyproject.toml  uvicorn.conf.py
qa/: external.py  urls.py  views.py
sse_liveqa/: asgi.py  settings.py  urls.py  views.py  wsgi.py
streams/: blocker.py  external.py  urls.py  views.py
streams/management/commands/: get_mastodon_feed.py
templates/qa/: create.html  questions.html  start.html
templates/streams/: base.html  new_posts.html  start.html
