[tool.poetry]
name = "django-sse-liveqa"
version = "0.1.0"
description = "An example of implementing live qa in Django using SSE"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.4"
psycopg2 = "^2.9.9"
redis = "^5.0.4"
django-configurations = "^2.5.1"
gunicorn = "^22.0.0"
uvicorn = "^0.29.0"
httpx-sse = "^0.4.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.6.0"
ruff = "^0.1.3"
isort = "^5.12.0"
watchfiles = "^0.21.0"


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.isort]
line_length = 120
atomic = true
profile = "black"
known_django = "django"
known_configs = "pravaham"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "CONFIGS", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
length_sort = true
skip = "venv/"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
